<resources>
    <string name="app_name" translatable="false">Scroball X</string>
    <string name="app_logo">App logo</string>

    <!-- Strings related to Settings -->
    <string name="saved_session_key" translatable="false">sessionKey</string>

    <!-- Main window tabs -->
    <string name="tab_now_playing">Now playing</string>
    <string name="tab_history">History</string>

    <!-- Enabled players settings -->
    <string name="pref_header_players">Enabled media players</string>
    <string name="pref_title_new_players">Scrobble from new players automatically</string>

    <!-- Notification settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_group_title_notification_types">Notification types</string>
    <string name="pref_title_notifications_scrobble">Track scrobbled</string>
    <string name="pref_group_title_notification_settings">Notification settings</string>
    <string name="pref_title_notification_vibrate">Vibrate</string>
    <string name="pref_title_notification_sound">Sound</string>
    <string name="pref_title_notification_light">LED</string>

    <!-- App theme settings -->
    <string name="pref_header_dark_theme">App theme</string>
    <string name="pref_auto">Automatically</string>
    <string name="pref_light_theme">Light</string>
    <string name="pref_dark_theme">Dark</string>

    <!-- ListView settings -->
    <string name="pref_header_clear_listview">Clear listening history</string>
    <string name="clear_listview_question">Do you really want to clear your listening history?
        \nApp will be rebooted automatically</string>
    <string name="pref_header_clear_listview_item">Clear</string>
    <string name="clear_listview_item_question">Do you really want to clear track from listening history?</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="progress_logging_in">Logging in…</string>
    <string name="error">Error</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="error_internet">You are not connected to the internet</string>
    <string name="splash_notification_access">Notification Access required</string>
    <string name="splash_notification_access_text">The Notification Access permission is required by Scroball X to read device playback state.</string>
    <string name="login_welcome">Welcome to Scroball X</string>
    <string name="login_desc">Scroball X is an unofficial modification of lightweight scrobbler for last.fm for Android
        \nTo get started, you must log in to your last.fm profile</string>

    <!-- Strings related to the main screen -->
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="logout_confirm">Logging out will clear any scrobbles which have yet to be submitted. Continue?</string>

    <!-- Strings related to the now playing screen -->
    <string name="nothing_playing">Nothing playing</string>
    <string name="nothing_playing_desc">It\'s time to listen to some music</string>
    <string name="track">Track</string>
    <string name="album">Artist (Album)</string>
    <string name="albumart_desc">Album cover</string>

    <!-- Strings related to the history screen -->
    <string name="no_history">History is empty</string>
    <string name="no_history_desc">Soon there will be everything you listened to.</string>

    <!-- Strings related to notifications -->
    <string name="notification_channel_name_scrobble">Scrobbles</string>
    <string name="notification_channel_name_error">Errors</string>
    <string name="authentication_error_title">Scroball X authentication error</string>
    <string name="authentication_error_content">You have been logged out from
        last.fm and scrobbling is paused. Tap here to re-login.</string>
    <string name="notification_action_love">Love</string>
    <string name="notification_action_loved">Loved</string>

    <!-- Strings related to "About app" -->
    <string name="pref_header_about_app">About app</string>
    <string name="app_name_pref" translatable="false">Scroball X 3.0.2</string>
    <string name="app_desc">Modification of Scroball by Peter Josling, which includes visual changes and fixes</string>
    <string name="first_dev" translatable="false">SecondThundeR</string>
    <string name="first_dev_sum">Project Initiator\nChief Designer</string>
    <string name="second_dev" translatable="false">iTaysonLab</string>
    <string name="second_dev_sum">Developer\nImplemented a dark theme and all sorts of useful things</string>
    <string name="sbx_telegram">Telegram Channel</string>
    <string name="sbx_telegram_sum">Here you can find out something interesting.</string>
    <string name="modpub_telegram">Modpub channel</string>
    <string name="modpub_telegram_sum">Channel with mods for different applications\nThanks also for distributing this mod!</string>
    <string name="sbx_github">Source code on Github</string>
    <string name="sbx_github_sum">I will be glad to help and useful tips.</string>

    <!-- Content Description Strings -->
    <string name="applogo_cd">App Logo</string>
    <string name="ic_done_cd">Sync Done Icon</string>
    <string name="ic_sync_cd">Sync In Progress Icon</string>
    <string name="ic_error_cd">Sync Failed Icon</string>
</resources>
