<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="players"
        android:icon="@drawable/ic_play_circle"
        android:title="@string/pref_header_players" />
    <Preference
        android:key="notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/pref_header_notifications" />
    <ListPreference
        android:entryValues="@array/theme_internal"
        android:entries="@array/theme_frontend"
        android:icon="@drawable/ic_night_mode"
        android:key="theme"
        android:defaultValue="0"
        android:title="@string/pref_header_dark_theme" />
    <Preference
        android:key="clear_adapter"
        android:icon="@drawable/ic_clear_all"
        android:title="@string/pref_header_clear_listview" />
    <Preference
        android:key="about_app"
        android:icon="@drawable/ic_info"
        android:title="@string/pref_header_about_app" />
</PreferenceScreen>