<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="su.secondthunder.scroball.ui.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="144dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_splashlogo"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/login_welcome"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/login_desc"
        android:textSize="14sp" />

    <Button
        android:id="@+id/email_sign_in_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold" />

</LinearLayout>
