<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/now_playing_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/now_playing_art_card"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp">

            <ImageView
                android:id="@+id/now_playing_art"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/albumart_desc"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/now_playing_title"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/now_playing_art_card"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/track"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/now_playing_artist"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/now_playing_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/album"
            android:textAlignment="center" />
    </RelativeLayout>

    <TextView
        android:id="@+id/now_playing_nothing_playing"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nothing_playing"
        android:layout_marginBottom="4dp"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/now_playing_nothing_playing_desc"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/nothing_playing_desc"
        android:textAlignment="center"
        android:textColor="?android:textColorSecondary"
        android:visibility="gone" />
</LinearLayout>
